# toml-reader-parse

./: .gitignore  Changelog.md  Changelog.org  Readme.md  Readme.org  htoml-parse.cabal  toml-reader-parse.cabal
src/Data/Toml/: Parse.hs
src/TOML/: Parse.hs
test/: TomlReaderTests.hs
