-- Created     :  20 October 2018

name:
  htoml-parse
version:
  0.1
synopsis:
  TODO
description:
  TODO
license:
  BSD2
-- license-file:
--   LICENSE
author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

cabal-version:
  2.0
build-type:
  Simple

library
  exposed-modules:
    Data.Toml.Parse
  hs-source-dirs:
    src
  build-depends:
    base >= 4.9,
    containers,
    dlist,
    htoml-megaparsec >= 2.1,
    mtl,
    prettyprinter >= 1.7,
    prettyprinter-combinators,
    text,
    time,
    transformers,
    unordered-containers,
    vector,
    void
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -fwarn-name-shadowing
    -fno-warn-type-defaults
  if impl(ghc >= 8.0)
    ghc-options:
      -Wall-missed-specialisations
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-exported-signatures
  if impl(ghc >= 8.2)
    ghc-options:
      -Wcpp-undef
      -Wmissing-home-modules
      -Wunbanged-strict-patterns
  ghc-prof-options:
    -fprof-auto
