cabal-version: 3.0

name:
  toml-reader-parse
version:
  0.1.1.1
synopsis:
  Alternative parser for TOML values produced by the toml-reader package.

description:
  Package defines a set of parser combinators that allows analyzing arbitrary TOML structures.
  Includes formatted errors that keep track of where in the original TOML file a value
  came from.

category: Data, TOML

license:
  Apache-2.0
license-file:
  LICENSE

author:
  Sergey Vinokurov
maintainer:
  Sergey Vinokurov <serg.foo@gmail.com>

build-type:
  Simple

extra-source-files:
  Readme.md
  Changelog.md

homepage: https://github.com/sergv/toml-reader-parse
source-repository head
    type: git
    location: https://github.com/sergv/toml-reader-parse.git

common ghc-options
  default-language:
    Haskell2010

  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-import-lists
    -Wno-missing-local-signatures
    -Wno-safe
    -Wno-unsafe

  if impl(ghc >= 8.8)
    ghc-options:
      -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode

  if impl(ghc >= 9.2)
    ghc-options:
      -Wno-missing-kind-signatures

  if impl(ghc >= 9.8)
    ghc-options:
      -Wno-missing-role-annotations
      -Wno-missing-poly-kind-signatures

library
  import: ghc-options
  exposed-modules:
    TOML.Parse
  hs-source-dirs:
    src
  build-depends:
    , base >= 4.14 && < 5
    , comonad
    , containers
    , deepseq
    , dlist
    , toml-reader >= 0.1
    , prettyprinter >= 1.7
    , prettyprinter-combinators
    , text
    , time
    , vector

test-suite toml-reader-tests
  import: ghc-options
  type:
    exitcode-stdio-1.0
  main-is:
    test/TomlReaderTests.hs
  hs-source-dirs:
    .
    test
  build-depends:
    , base
    , optparse-applicative
    , prettyprinter
    , prettyprinter-combinators
    , tasty
    , tasty-hunit
    , text
    , toml-reader
    , toml-reader-parse
  ghc-options:
    -rtsopts
    -main-is TomlReaderTests
